objects/Opportunity_Projects__c.object
<CustomObject>
    <description>This Object is the Junction Object between Opportunity and MW_Projects.</description>
    <fields>
        <fullName>Duplicate_Opportunity_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is to prevent that the same opportunity can only be added once to the project.</description>
        <label>Duplicate Opportunity Association</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Opportunity_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Project Relationship</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Opportunity Projects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Project Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>